# bam

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
ext/: CMakeLists.txt
src/: CMakeLists.txt
src/App/: CMakeLists.txt
src/App/Source/: App.cpp  index.html
src/Shaders/: CMakeLists.txt
src/Shaders/Cache/: Default_fs_essl.h  Default_fs_glsl.h  Default_fs_mtl.h  Default_fs_spv.h  Default_vs_essl.h  Default_vs_glsl.h  Default_vs_mtl.h  Default_vs_spv.h  EmbeddedShaders.cpp  EmbeddedShaders.h
src/Shaders/Include/: Shaders.h
src/Shaders/Source/: Default.fs  Default.vs  ShaderHelper.h
